# SZ3

./: .clang-format  .gitattributes  .gitignore  ArithmeticEncoder_8hpp.html  ArithmeticEncoder_8hpp__incl.dot  ArithmeticEncoder_8hpp_source.html  BitshuffleEncoderV2_8hpp.html  BitshuffleEncoderV2_8hpp__incl.dot  BitshuffleEncoderV2_8hpp_source.html  BitshuffleEncoder_8hpp.html  BitshuffleEncoder_8hpp__incl.dot  BitshuffleEncoder_8hpp_source.html  BlockwiseDecomposition_8hpp.html  BlockwiseDecomposition_8hpp__dep__incl.dot  BlockwiseDecomposition_8hpp__incl.dot  BlockwiseDecomposition_8hpp_source.html  BlockwiseIterator_8hpp.html  BlockwiseIterator_8hpp__dep__incl.dot  BlockwiseIterator_8hpp__incl.dot  BlockwiseIterator_8hpp_source.html  BypassEncoder_8hpp.html  BypassEncoder_8hpp__incl.dot  BypassEncoder_8hpp_source.html  ByteUtil_8hpp.html  ByteUtil_8hpp__dep__incl.dot  ByteUtil_8hpp__incl.dot  ByteUtil_8hpp_source.html  CMakeLists.txt  Collections_8hpp.html  Collections_8hpp__dep__incl.dot  Collections_8hpp__incl.dot  Collections_8hpp_source.html  ComposedPredictor_8hpp.html  ComposedPredictor_8hpp__dep__incl.dot  ComposedPredictor_8hpp__incl.dot  ComposedPredictor_8hpp_source.html  Compressor_8hpp_source.html  Config_8hpp.html  Config_8hpp__dep__incl.dot  Config_8hpp__incl.dot  (+559 more)
.github/workflows/: build-pysz-test.yml  build-pysz.yml  cmake.yml  doxygen.yml  integration_test.yml  stale.yml
H5Z-SZ3/: CMakeLists.txt  Makefile
H5Z-SZ3/include/: H5Z_SZ3.h
H5Z-SZ3/src/: H5Z_SZ3.cpp
H5Z-SZ3/test/: CMakeLists.txt
H5Z-SZ3/test/src/: convertBinToHDF5.cpp  dsz3FromHDF5.cpp  sz3ToHDF5.cpp
data/: PolyRegressionCoefAux1D.f32  PolyRegressionCoefAux2D.f32  PolyRegressionCoefAux3D.f32  PolyRegressionCoefAuxGenerator.m
docs/: Doxyfile  build_docs.sh  footer.html  header.html  pagefind.css
exaalt/src/: CMakeLists.txt  dummy.cpp
exaalt/test/: CMakeLists.txt  test_exaalt_compressor.cpp  test_kmeans1d.cpp  test_multilevel.cpp  test_multilevel2.cpp  test_pattern_compressor.cpp  test_persist.cpp
exaalt/test/deprecated/: LocalStore.cpp  LocalStore.hpp
examples/: CMakeLists.txt  sz3.config  sz3.cpp
include/: SZ.hpp  SZ_Impl.hpp  SZ_Impl_zone.hpp  def.hpp  def.hpp.in  mdz.h  version.hpp
include/SZ3/: def.hpp  (+6 more)
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  (+82 more)
src/: CMakeLists.txt  dummy.cpp
test/: CMakeLists.txt  beta_sz_pw.cpp  beta_sz_truncate.cpp  mdb.cpp  sz.config  sz.cpp  sz.hpp  sz2.1.config  sz3.config  sz3interp_cubic.config  sz_backend.hpp  sz_compress_test.cpp  sz_compress_test2.cpp  sz_demo.cpp  sz_exaalt.cpp  sz_fast.cpp  sz_huffman_test.cpp  sz_interp.cpp  sz_interp.hpp  sz_interp_double.cpp  sz_interp_int.cpp  sz_md.cpp  sz_pinterp.cpp  sz_pinterp_block.cpp  sz_pinterp_mquant.cpp  sz_pinterp_mquant_v1.cpp  sz_pinterp_mquant_v2.cpp  sz_pinterp_savememory.cpp  sz_progressive_interp.cpp  sz_progressive_interp_v2.cpp  sz_progressive_interp_v3.cpp  sz_progressive_interp_v4.cpp  sz_pw.cpp  sz_rtm.cpp  sz_timebased.cpp  sz_truncate.cpp  sz_v2.cpp  sz_v2.hpp  sz_v2s.cpp  test_arithmetic_coding.cpp  (+8 more)
test/deprecated/: beta_sz_pw.cpp  beta_sz_truncate.cpp  sz_interp.hpp  test_sz_truncate.cpp  test_sz_v2.cpp  test_sz_v2.hpp  test_sz_v2s.cpp  test_szv2.cpp  test_szv2.hpp  test_szv2s.cpp
test/exaalt/: LocalStore.cpp  LocalStore.hpp
tools/mdz/: CMakeLists.txt  README.md  mdz.cpp  mdz_smoke_test.cpp
tools/mdz/include/: ExaaltCompressor.hpp  KmeansUtil.hpp  TimeBasedFrontend.hpp  mdz.hpp
tools/mdz/mdz/: KmeansUtil.hpp  mdz.hpp
tools/paraview/: CMakeLists.txt  README.md
tools/paraview/SZ3Reader/: CMakeLists.txt  paraview.plugin
tools/paraview/SZ3Reader/Reader/: CMakeLists.txt  SZ3Reader.xml  vtk.module  vtkSZ3Reader.cxx  vtkSZ3Reader.h
tools/pysz/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  pysz.py  setup.py  test.py
tools/pysz/deprecated/: test.py
tools/pysz/src/pysz/: __init__.py  pyConfig.pxd  pyConfig.pyx  pyConfigEnums.py  sz.pxd  sz.pyx
tools/pysz/tests/: __init__.py  test.py  test_pysz.py
tools/sz3/: CMakeLists.txt  bench_iterator.cpp  interp_estimator.cpp  sz3.config  sz3.cpp  sz3_customized_demo.cpp  sz3_smoke_test.cpp  zfp_demo.cpp
tools/sz3/bench/: bench.sh  bench_all.sh  bench_iterator_hybrid2.cpp  bench_iterator_hybrid6.cpp  bench_iterator_sz2.cpp
tools/sz3/bench_iterator/: bench.sh  bench_all.sh  bench_iterator_hybrid1.cpp  bench_iterator_hybrid3.cpp  bench_iterator_hybrid4.cpp  bench_iterator_hybrid5.cpp  bench_iterator_lorenzo.cpp  bench_iterator_lorenzo2.cpp  bench_iterator_lorenzo3.cpp  bench_iterator_lorenzo4.cpp  bench_iterator_lorenzo5.cpp  bench_iterator_sz3.cpp  lorenzo.cpp  reg.cpp
tools/sz3/demo/: CMakeLists.txt  sz3demo_customized.cpp  sz3demo_interpolation.cpp  sz3demo_lorenzo_fast.cpp  sz3demo_lorenzo_generic.cpp
tools/sz3/deprecated/: beta_sz_pw.cpp  beta_sz_truncate.cpp  test_arithmetic_coding.cpp  test_huffman_coding.cpp
tools/sz3/deprecated/bench_iterator/: bench_iterator_hybrid3.cpp  bench_iterator_lorenzo2.cpp  bench_iterator_lorenzo3.cpp  bench_iterator_sz2.cpp
tools/sz3c/: CMakeLists.txt
tools/sz3c/include/: sz3c.h
tools/sz3c/src/: sz3c.cpp
tools/test/: CMakeLists.txt
tools/test/deprecated/: SZBlockInterpolationCompressor.hpp  beta_sz_truncate.cpp  test_arithmetic_coding.cpp
tools/test/integration/: datalist.txt  datasets.json  integration_test_driver.py  test_h5.py  test_h5_filter.py  test_sz3.py  test_sz3_executable.py
tools/test/integration/deprecated/: test_h5.py
tools/test/modules/: test_encoder.cpp  test_lossless.cpp  test_quantizer.cpp  test_svd_decomposition.cpp  test_sz_dev.cpp
tools/zstd/: CMakeLists.txt
zstd/: CMakeLists.txt  Makefile  Makefile.in
(+294 files in other folders)
